# FDD_WebScrape

./: Project_Instructions.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.sh  setup.py  setup_env.sh
src/: __main__.py  config.py  main.py
src/db/: database.py
src/scrapers/: active_filings.py  fdd_downloader.py  franchise_data.py
src/utils/: file_operations.py  pdf_utils.py
tests/: README.md  conftest.py  test_active_filings.py  test_database.py  test_file_operations.py  test_pdf_utils.py  utils.py
